@@ -1,8 +1,10 @@
+2008-08-01 Backported memory leak fixes in _ttconv.cpp - MGD
+
 2008-07-24 Deprecated (raise NotImplementedError) all the mlab2
            functions from matplotlib.mlab out of concern that some of
            them were not clean room implementations. JDH
 
-2008-07-16 Improve error handling in texmanager, thanks to Ian Henry 
+2008-07-16 Improve error handling in texmanager, thanks to Ian Henry
            for reporting - DSD
 
 2008-07-09 Improve mathtext radical rendering - MGD
